# threadBridge

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: callNanobanana.md  codex-alpha-cli-exit-investigation-2026-03-19.md  codex-app-server-ws-protocol.md  qwen-image-2512-app-icon-prompting.md  qwen-image-2512-fluent-office-f1-f2-exploration.md  session-sync-manual-test.md  telegram-html-preview.html  telegram-html-rendering.md  telegram-rendering-work-report-2026-03-19.md  telegram-slash-commands.md  z-image-turbo-app-icon-exploration.md
docs/plan/: README.md  app-server-ws-mirror-observer.md  authoring-guide.md  codex-busy-input-gate.md  codex-cli-telegram-status-sync-hooks.md  codex-execution-modes.md  codex-plan-mirror.md  hcodex-launch-contract.md  hcodex-lifecycle-supervision.md  hcodex-pre-refactor-history.md  llm-guidance-and-goals.md  macos-menubar-thread-manager.md  message-queue-and-status-delivery.md  optional-agents-injection.md  owner-runtime-contract.md  post-cli-runtime-cleanup.md  runtime-architecture.md  runtime-protocol.md  runtime-responsibility-drift-audit.md  runtime-state-machine.md  runtime-transport-abstraction.md  session-level-cli-telegram-sync.md  session-level-mirror-and-readiness.md  session-lifecycle.md  telegram-adapter-migration.md  telegram-markdown-adaptation.md  telegram-webapp-observability.md  topic-title-status.md  working-session-observability.md  workspace-runtime-surface.md
docs/plan/app-server-observer/: app-server-observer-upstream-capability-audit.md  app-server-ws-mirror-observer.md
docs/plan/desktop-runtime-owner/: app-server-ws-backend-progress-2026-03-27.md  app-server-ws-backend.md  local-app-pairing-bridge.md  macos-public-release-track.md  owner-runtime-contract.md
docs/plan/management-desktop-surface/: macos-menubar-thread-manager.md
docs/plan/runtime-control/: codex-busy-input-gate.md  codex-execution-modes.md  optional-agents-injection.md  post-cli-runtime-cleanup.md  runtime-architecture.md  runtime-data-root.md  runtime-protocol-convergence.md  runtime-protocol.md  runtime-responsibility-drift-audit.md  runtime-support-installer-refactor.md  session-lifecycle.md  workspace-runtime-skill.md  workspace-runtime-surface.md
docs/plan/telegram-adapter/: codex-home-dir-session-mirror.md  message-queue-and-status-delivery.md  telegram-adapter-migration.md  telegram-markdown-adaptation.md
docs/releases/: 0.1.0-rc.2.md  0.1.0-rc.3.md  0.1.0-rc.4.md  README.md  repo-release-runbook.md
runtime_assets/templates/: AGENTS.md
runtime_assets/tools/: build_prompt_config.py  context_probe_cli.py  generate_image.py  send_telegram_media.py
runtime_support/templates/: threadbridge-runtime-skill.build.md
runtime_support/templates/threadbridge-runtime-skill/: SKILL.md
runtime_support/templates/threadbridge-runtime-skill/references/: build_prompt_config.request.schema.json  runtime-tools.md  send_telegram_media.request.schema.json
rust/src/: app_server_observer.rs  app_server_runtime.rs  app_server_ws_worker.rs  approval.rs  bot_runner.rs  codex.rs  collaboration_mode.rs  config.rs  delivery_bus.rs  execution_mode.rs  hcodex_ingress.rs  hcodex_runtime.rs  hcodex_ws_bridge.rs  interactive.rs  launch_at_login.rs  lib.rs  local_control.rs  logging.rs  management_api.rs  process_transcript.rs  process_utils.rs  repository.rs  runtime_assets.rs  runtime_control.rs  runtime_interaction.rs  runtime_owner.rs  runtime_paths.rs  runtime_protocol.rs  runtime_support.rs  telegram_probe.rs  thread_state.rs  thread_transition.rs  tool_results.rs  tui_proxy.rs  turn_completion.rs  viewer_text.rs  workspace.rs  workspace_status.rs
rust/src/telegram_runtime/: codex_home_session_mirror.rs  final_reply.rs  interaction_bridge.rs  media.rs  mod.rs  preview.rs  restore.rs  status_sync.rs  thread_flow.rs  title_sync.rs
rust/static/app_icon/: threadBridge.icns
rust/static/management/: index.css  index.html  index.js
scripts/: build_and_deploy_threadbridge.sh  build_macos_app_icon.sh  chroma_key_to_alpha.py  extract_macos_icon_tile.py  local_threadbridge.sh  release_rc.sh  release_threadbridge.sh  run_qwen_image_2512_icon_exploration.py  run_z_image_turbo_icon_exploration.py  select_top_icons_qwen.py
templates/: AGENTS.md  nanobanana.buildpromptconfig.md  thread-agents.build.md
tests/: runtime_control_owner_managed.rs
tmp/: final-reply-last.html  final-reply-last.md
tools/: build_prompt_config.py  codex_sync.py  context_probe_cli.py  generate_image.py  min_chat_probe.py  resolve_hcodex_launch.py  send_telegram_media.py
