[package]
name = "threadbridge-rust"
version = "0.1.0"
edition = "2024"

[lib]
path = "rust/src/lib.rs"

[[bin]]
name = "threadbridge"
path = "rust/src/bin/threadbridge.rs"

[[bin]]
name = "min_chat_probe"
path = "rust/src/bin/min_chat_probe.rs"

[[bin]]
name = "telegram_html_preview"
path = "rust/src/bin/telegram_html_preview.rs"

[[bin]]
name = "telegram_html_probe"
path = "rust/src/bin/telegram_html_probe.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
pulldown-cmark = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.17", default-features = false, features = ["ctrlc_handler", "macros", "rustls"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.16", features = ["serde", "v4"] }
walkdir = "2.5"
