[package]
name = "threadbridge-rust"
version = "0.1.0"
edition = "2024"

[lib]
path = "rust/src/lib.rs"

[[bin]]
name = "threadbridge_desktop"
path = "rust/src/bin/threadbridge_desktop.rs"

[[bin]]
name = "min_chat_probe"
path = "rust/src/bin/min_chat_probe.rs"

[[bin]]
name = "telegram_html_preview"
path = "rust/src/bin/telegram_html_preview.rs"

[[bin]]
name = "telegram_html_probe"
path = "rust/src/bin/telegram_html_probe.rs"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28"
dotenvy = "0.15"
futures-util = "0.3"
pulldown-cmark = "0.9"
reedline = { version = "0.40", features = ["external_printer"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.17", default-features = false, features = ["ctrlc_handler", "macros", "rustls"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
unicode-width = "0.2"
uuid = { version = "1.16", features = ["serde", "v4"] }
walkdir = "2.5"

[target.'cfg(target_os = "macos")'.dependencies]
tao = "0.30"
tray-icon = "0.21"
