[package]
name = "threadbridge-rust"
version = "0.1.0"
edition = "2024"

[package.metadata.bundle]
name = "threadBridge"
identifier = "com.qoli.threadbridge"
icon = ["rust/static/app_icon/threadBridge.icns"]

[package.metadata.bundle.bin.threadbridge_desktop]
name = "threadBridge"
identifier = "com.qoli.threadbridge"
icon = ["rust/static/app_icon/threadBridge.icns"]
osx_info_plist_exts = ["rust/static/macos/menubar-only.plist"]

[lib]
path = "rust/src/lib.rs"

[[bin]]
name = "threadbridge_desktop"
path = "rust/src/bin/threadbridge_desktop.rs"

[[bin]]
name = "app_server_ws_worker"
path = "rust/src/bin/app_server_ws_worker.rs"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28"
directories = "6.0"
dotenvy = "0.15"
futures-util = "0.3"
pulldown-cmark = "0.9"
reedline = { version = "0.40", features = ["external_printer"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.17", default-features = false, features = ["ctrlc_handler", "macros", "rustls"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
unicode-width = "0.2"
url = "2.5"
uuid = { version = "1.16", features = ["serde", "v4"] }
walkdir = "2.5"

[target.'cfg(target_os = "macos")'.dependencies]
tao = "0.30"
tray-icon = "0.21"
